# cargo-cross

./: .gitignore  Cargo.toml  LICENSE  README.md  action-wrapper.sh  action.yml  build.sh  cross.sh  exec.sh
.github/workflows/: branch-release.yml  release.yml  test.yml
src/: cargo.rs  cli.rs  color.rs  config.rs  download.rs  env.rs  error.rs  lib.rs  main.rs  runner.rs
src/platform/: android.rs  darwin.rs  freebsd.rs  ios.rs  linux.rs  mod.rs  netbsd.rs  windows.rs
tests/: help_output.rs
