[package]
name = "cargo-cross"
version = "1.4.0"
edition = "2021"
authors = ["pyh1670605849@gmail.com"]
description = "A cargo subcommand for cross-compilation, no need docker!"
license = "MIT"
repository = "https://github.com/zijiren233/cargo-cross"

[[bin]]
name = "cargo-cross"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = [
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
    "color",
] }
reqwest = { version = "0.13", features = ["stream"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "io-util",
    "sync",
    "signal",
] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
tokio-tar = { version = "0.3", default-features = false }
async-compression = { version = "0.4", default-features = false, features = [
    "tokio",
    "gzip",
] }
zip = { version = "7", default-features = false, features = ["deflate"] }
which = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
thiserror = "2"
indicatif = "0.18"
regex = "1"
globset = { version = "0.4", default-features = false }
shlex = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process", "signal"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = 0
lto = 'off'
panic = "abort"
strip = "symbols"
debug-assertions = false
overflow-checks = false

[profile.release]
opt-level = "z"
debug = 0
lto = 'thin'
panic = "abort"
strip = "symbols"
debug-assertions = false
overflow-checks = false
