[package]
name = "cargo-cross"
version = "1.4.1"
edition = "2021"
authors = ["pyh1670605849@gmail.com"]
description = "A cargo subcommand for cross-compilation, no need docker!"
license = "MIT"
repository = "https://github.com/zijiren233/cargo-cross"

[[bin]]
name = "cargo-cross"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "macros", "process", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
tokio-tar = { package = "astral-tokio-tar", version = "0.5", default-features = false }
async-compression = { version = "0.4", default-features = false, features = [
    "tokio",
    "gzip",
] }
zip = { version = "7", default-features = false, features = ["deflate"] }
which = "8"
serde_json = "1"
colored = "3"
thiserror = "2"
indicatif = "0.18"
# Use regex-lite for faster compile (smaller regex engine, same API for basic usage)
regex-lite = "0.1"
globset = { version = "0.4", default-features = false }
shlex = "1"
# Path slash conversion for CMake compatibility on Windows
path-slash = "0.2"

# Platform-specific TLS for reqwest:
# - macOS/Windows: native-tls (system TLS, fast compile)
# - Linux/others: rustls (no OpenSSL dependency needed)
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
reqwest = { version = "0.13", default-features = false, features = [
    "stream",
    "native-tls",
    "system-proxy",
] }

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
reqwest = { version = "0.13", default-features = false, features = [
    "stream",
    "rustls",
    "system-proxy",
] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["process", "signal"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = 0
lto = 'off'
panic = "abort"
strip = "symbols"
debug-assertions = false
overflow-checks = false

[profile.release]
opt-level = "z"
debug = 0
lto = 'thin'
panic = "abort"
strip = "symbols"
debug-assertions = false
overflow-checks = false
